--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,30 @@ services:
     container_name: craft_container
     working_dir: /craft
     command:
-      - ./commands/start_server.sh
+      - ./commands/start_server_${MODE}.sh
     ports:
-      - 8010:8000
+      - ${LOCAL_PORT}:${WSGI_PORT}
     volumes:
       - ./src:/craft/src
-      - ./commands:/craft/commands
+      - static_content:/craft/src/static_content
+      - media_content:/craft/src/media_content
     env_file:
       - .env
+
+  nginx:
+    image: nginx:1.19
+    volumes:
+      - static_content:/craft/src/static
+      - media_content:/craft/src/media
+      - ./nginx:/etc/nginx/conf.d
+    ports:
+      - 80:80
+      - 443:443
+    env_file:
+      - .env
+    depends_on:
+      - backend
+
+volumes:
+  static_content: { }
+  media_content: { }
