--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-extensions==3.2.1
 django-phonenumber-field==7.0.2
 Faker==18.4.0
 flake8==6.0.0
+gunicorn==20.1.0
 isort==5.12.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
@@ -22,6 +23,7 @@ pyflakes==3.0.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-slugify==8.0.1
+pytz==2023.3
 six==1.16.0
 sqlparse==0.4.4
 text-unidecode==1.3
