--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,60 @@
 asgiref==3.6.0
 black==23.3.0
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
 click==8.1.3
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==40.0.2
+defusedxml==0.7.1
 Django==4.2
 django-admin-interface==0.25.0
 django-colorfield==0.8.0
 django-extensions==3.2.1
 django-phonenumber-field==7.0.2
+django-templated-mail==1.1.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+djoser==2.2.0
+drf-yasg==1.21.5
 Faker==18.4.0
 flake8==6.0.0
 gunicorn==20.1.0
+idna==3.4
+inflection==0.5.1
 isort==5.12.0
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.2
 mccabe==0.7.0
 mypy-extensions==1.0.0
+oauthlib==3.2.2
 packaging==23.1
 pathspec==0.11.1
 phonenumbers==8.13.10
 Pillow==9.5.0
 platformdirs==3.2.0
 pycodestyle==2.10.0
+pycparser==2.21
 pydot==1.4.2
 pyflakes==3.0.1
+PyJWT==2.6.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-slugify==8.0.1
+python3-openid==3.2.0
 pytz==2023.3
+repoze.lru==0.7
+requests==2.30.0
+requests-oauthlib==1.3.1
+ruamel.yaml==0.17.24
+ruamel.yaml.clib==0.2.7
 six==1.16.0
+social-auth-app-django==5.2.0
+social-auth-core==4.4.2
 sqlparse==0.4.4
 text-unidecode==1.3
 tomli==2.0.1
+uritemplate==4.1.1
+urllib3==2.0.2
